--- a/index.Rmd
+++ b/index.Rmd
@@ -5,16 +5,15 @@ output: html_document
 
 ### Introduction
 
-The United States has the highest prison rate in the world, and people of colour, especially Black Americans, are affected more than white people. Using data from the Vera Institute, I will look at the trends in incarceration in the U.S. in this study. The factors I will be looking at are the total number of people in prison , the rate of incarceration per 100,000 people, and the breakdowns by race and gender. These factors are very important for figuring out how big and what kind of differences there are in imprisonment.
+The United States has the highest prison rate in the world, with significant variation across states. This study uses data from the Vera Institute to examine incarceration trends at the state level in the U.S. I will focus on the total number of people in prison and the rate of incarceration per 100,000 people. By analyzing these factors, we can better understand the differences in imprisonment across states and identify areas in need of targeted policies and reforms.
+
 
 ### Summary Information
 
 
+In the most recent year covered by the dataset, the total prison population across the United States was 327,167,434. On average, each county had a prison population of approximately 104,226.6 individuals. California stood out as the state with the highest prison population, reporting a total of 66,000 incarcerated individuals. Over the past decade, the total prison population in the U.S. has decreased by 23,079,618, indicating a significant trend towards reduction. By researching these trends in incarceration, I aim to provide insights into the dynamics of the U.S. prison system, which can help inform policymakers and advocates in developing strategies to reduce incarceration rates and address the systemic issues within the criminal justice system.
 
-In the latest year of the dataset, the total prison population across the United States was found to be 327,167,434. On average, each county had a prison population of approximately  104226.6 individuals. 
-The state with the highest prison population was California, which reported a total of 66,000 incarcerated individuals. Over the past ten years, the total prison population in the U.S. has decreased by 23079618 in the last ten years.
-Notably, Black individuals make up a significant portion of the incarcerated population, with 8.813401% of the Black population aged 15 to 64 being incarcerated. 
-This stark disparity highlights the racial inequalities present within the U.S. incarceration system, emphasizing the need for targeted policies and reforms to address these systemic issues.
+
 
 ### The Dataset
 
